# ceres_nlopt_wrapper

./: CMakeLists.txt  README.md  package.xml
include/ceres_nlopt_wrapper/: ceres_nlopt_wrapper.h  nlopt_parameter_server.h  optimization_history.h  utils.h
src/: ceres_nlopt_wrapper.cpp  nlopt_parameter_server.cpp  optimization_history.cpp  utils.cpp
